last commit for release 1.1.0

--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,45 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
+   <profiles>
+        <!-- en local -->
+        <profile>
+            <!--profil de production a publier-->
+            <id>local</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <build>
+                <resources>
+                    <resource>
+                        <directory>src/main/resources</directory>
+                        <filtering>true</filtering>
+                    </resource>
+                    <resource>
+                        <directory>src/main/resources/local</directory>
+                    </resource>
+
+                </resources>
+            </build>
+        </profile>
+
+        <profile>
+            <!--profil de production a publier-->
+            <id>dev</id>
+            <build>
+                <resources>
+                    <resource>
+                        <directory>src/main/resources</directory>
+                        <filtering>true</filtering>
+                    </resource>
+                    <resource>
+                        <directory>src/main/resources/dev</directory>
+                    </resource>
+
+                </resources>
+            </build>
+        </profile>
+    </profiles>
 
     <build>
         <finalName>noteRestServices</finalName>
