--- a/pom.xml
+++ b/pom.xml
@@ -50,11 +50,6 @@
             <version>1.1.0</version>
         </dependency>
 
-        <dependency>
-            <groupId>io.sentry</groupId>
-            <artifactId>sentry-log4j2</artifactId>
-            <version>1.6.3</version>
-        </dependency>
         <!-- https://mvnrepository.com/artifact/org.testng/testng -->
         <dependency>
             <groupId>org.testng</groupId>
@@ -69,10 +64,17 @@
             <version>1.2.17</version>
         </dependency>
 
+
         <dependency>
             <groupId>com.bootcamp</groupId>
             <artifactId>commons</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
