--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
             <groupId>com.rintio</groupId>
             <artifactId>elastic</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.modelmapper</groupId>
@@ -86,6 +92,10 @@
                     <groupId>com.bootcamp</groupId>
                     <artifactId>commons</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
 
@@ -97,6 +107,10 @@
                 <exclusion>
                     <groupId>com.bootcamp</groupId>
                     <artifactId>commons</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
@@ -245,6 +259,12 @@
             <groupId>com.bootcamp</groupId>
             <artifactId>db-access</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <!-- https://mvnrepository.com/artifact/com.jayway.restassured/rest-assured -->
         <dependency>
